--- a/back/TestTaskLearningResource/.env
+++ b/back/TestTaskLearningResource/.env
@@ -1,3 +1,11 @@
 AUTO_MARK_HOMEWORK_URL = 'http://127.0.0.1:8000/api/homeworks/{homework_answer_data_id}/answer/mark/'
 ADMIN_TOKEN_KEY = "Token 24b6f69d9be8140b85a6864290639ea2187ed8f7"
 MAX_FILE_SIZE_IN_BYTES = 2097152
+
+SECRET_KEY = 'django-insecure-gd5qvfof_2g#^wu($bm@1a_2#$8-f0!zu7($j-7ejdjv!n=6n-'
+POSTGRES_ENGINE = 'django.db.backends.postgresql'
+POSTGRES_DB = postgres
+POSTGRES_USER = postgres
+POSTGRES_PASSWORD = 12345678
+POSTGRES_HOST = 'db'
+POSTGRES_PORT = 5432
