--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -7,17 +7,22 @@ coreschema==0.0.4
 cryptography==3.4.7
 defusedxml==0.7.1
 Django==3.2
+django-extensions==3.1.3
 django-templated-mail==1.1.1
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.6.0
 djoser==2.1.0
+flake8==3.9.0
 idna==2.10
 itypes==1.2.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
+mccabe==0.6.1
 oauthlib==3.1.0
 psycopg2==2.8.6
+pycodestyle==2.7.0
 pycparser==2.20
+pyflakes==2.3.1
 PyJWT==2.0.1
 python3-openid==3.2.0
 pytz==2021.1
